# somamdd

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  mkinstalldirs  somamdd.cfg_example
confuse/: Makefile.am  Makefile.in  confuse.c  confuse.h  lexer.c
src/: Makefile.am  Makefile.in  cast.c  config.c  log.c  main.c  mdd.h  parser.c
